# stock-tracker

./: Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  conftest.py  database.py  logger.py  main.py  stocks.db
app/export/: factory.py  paths.py  routers.py
app/index_strategy/: factory.py
app/indexes/: enums.py  models.py  paths.py  routers.py  schema.py  services.py
app/performance_calculation/: factory.py
app/prices/: models.py  paths.py  routers.py  schema.py  services.py
app/stocks/: enums.py  models.py  paths.py  routers.py  schema.py  services.py
app/stocks/data/: 10_companies.csv  50_companies.csv  sp500_companies.csv
app/stocks/tests/: test_services.py
app/tasks/: dispatcher.py  enums.py  models.py  paths.py  routers.py  scheduler.py  schema.py  services.py
ui/: dashboard.py
ui/components/: composition_change.py  composition_section.py  export_section.py  index_performance.py  summary_metrics.py
